Solved dropdown background in dark mode

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,7 +22,7 @@ $main-color: #4c979b;
 $border-color: #f2f2f1;
 $button-color: #112a4e;
 $small-color: #b1b1b1;
-$modal-background: #222222;
+$modal-background: #5d5d5d;
 $navbar-background: #464646;
 $link-color: #074a4d;
 $custom-button-shadow: #074a4db3;
